--- a/Spring-10-ORM-TableCreation/src/main/resources/application.properties
+++ b/Spring-10-ORM-TableCreation/src/main/resources/application.properties
@@ -9,6 +9,7 @@
 #spring.h2.console.path=/h2-console
 #spring.h2.console.enabled=true
 
+#PostgreSQL Connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
@@ -19,3 +20,5 @@ spring.jpa.show-sql=true
 spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.defer-datasource-initialization=true
