--- a/Spring-10-ORM-TableCreation/src/main/resources/application.properties
+++ b/Spring-10-ORM-TableCreation/src/main/resources/application.properties
@@ -14,11 +14,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-spring.sql.init.mode=always
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=create
+#spring.sql.init.mode=always
 
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.jpa.defer-datasource-initialization=true
