--- a/Spring-14-ORM-Queries/src/main/resources/application.properties
+++ b/Spring-14-ORM-Queries/src/main/resources/application.properties
@@ -3,9 +3,14 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=create
+#spring.sql.init.mode=always
 
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.defer-datasource-initialization=true
+
+spring.flyway.enabled=false
