--- a/Spring-14-ORM-Queries/src/main/resources/application.properties
+++ b/Spring-14-ORM-Queries/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-#PostgreSQL Connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
@@ -7,10 +6,8 @@ spring.jpa.show-sql=false
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.defer-datasource-initialization=true
-
-spring.flyway.enabled=false
